
VM(2016-12-21) Updating XMID & WAVEMID ranges for spectrograph 2 in examples/opLimits.par

v5_10_3
VM (2016-11-19) SoS modifications
-changed the scale factor in quickextract_elg.pro and plotsn_elg.pro

- bin/fluxcorr_prior.py: fixed a bug (removing '.gz' from the framefile name)
- bin/reformat_spectra_daily: changed mkdir for makedirs to create spectra/full and spectra/lite
- bin/reformat_spectra_batch: changed mkdir for makedirs to create spectra/full and spectra/lite

-------------------------------------------------------------------------------
v5_10_2
VM (2016-09-09) SoS modifications to handle the ELG plates
-Based on keyword 'programname' in plugmap files, ELG plates will be treated differently for SN2-
 measurements. Use sky free wavelengths in z-band to measure meansn2.
-Included a scale factor in quickextract_elg.pro and plotsn_elg.pro to tune the ELG depth.
-Included a constant (=0.083 corresponding to the scalefactor) in the equation on SN plots; plotsn_elg.pro
-Updated opSNlimits.par to include z-band with a slope 0.6
-Updated  new gain measurements post 2016 Summer shutdown
-Updated plotsn to exclude objtype='NA' 

Adding:
-  pro/apo2d/quickextract_elg.pro 
-  pro/spec2d/plotsn_elg.pro 

Updating:
-  pro/apo2d/aporeduce.pro
-  pro/apo2d/quicktrace.pro
-  pro/apo2d/apo_plotsn.pro
-  pro/spec2d/sdssproc.pro
-  opfiles/opSNlimits.par

-------------------------------------------------------------------------------
v5_10_1
JEB (2016-06-17) Post DR14 tag for daily reductions

- Few bugs fixed after DR14 run

-------------------------------------------------------------------------------
v5_10_0

JEB (2017-01-19) Fix for DR14 tag 
- pro/spec1d/spreduce1d.pro: change of specobjid type from LONG64 to ULONG64
- pro/spec1d/readspec.pro: adding /unsigned keyword to get correct values for SPECOBJID in zans structure

JEB (2016-05-24) Tag for DR14. 
New python fluxcorr code to avoid biases for low S/N spectra (by Stephen Bailey)